fixed css broken in last commit

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@
   flex-flow: column nowrap;
   height: 100%;
 }
+.appContainer {
+  flex-grow: 2;
+}
 
 .appBody {
   text-align: justify;
