--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -6,6 +6,7 @@
   justify-content: space-between;
   align-items: center;
   align-content: space-around;
+  align-self: flex-end;
 }
 .footer * {
   margin-top: 5px;
